jaxb-api added to dependencies to allow all java versions